2013-01-14  Felix Ingrand  <felix@precise>

	* slistPack.c (sl_make_snode): remove the test on node==NULL... I
	use it myself too often.

2013-01-12  Felix Ingrand  <felix@precise>

	* slistPack.c (sl_get_from_tail): Trying to nail down MW
	bug. Maybe he managed to put a NULL Term in the list, confusing
	the loop transforming the c_list in lisp_list. Need more
	investigation, but this may fix the memory corruption and make the
	bug more visible.
	(sl_make_snode): Add an error check if people are trying to add a
	NULL element to a list, as it can create problem when the list is
	accessed making the assumption it does not contain any (NULL).

2013-01-09  Felix Ingrand  <felix@precise>

	* slistPack.c (sl_free_slist): Remove some inlining to try chasing code...

2012-02-09  Francois Felix Ingrand  <felix@ingrand.net>

	* mallocPack.c: Darwin does not have malloc.h...?
2011-09-08  Francois Felix Ingrand  <felix@ingrand.net>

	* mallocPack.c: malloc.h has been moved on darwin 10.8? include stdlib.h instead.

2009-11-16  Francois Felix Ingrand  <felix@ingrand.net>

	* mallocPack.c (is_small): should now deal with pointer, not int.

2009-03-30  Francois Felix Ingrand  <felix@ingrand.net>

	* shashPack_f.h: Well.. not that simple... it should return 1 as
	an int.


	* shashPack.h: May be a problem of SL_PFI vs. SL_PFC
	Indeed, the matching function return a char... not an int.

2003-09-22  Francois Felix Ingrand  <felix@ingrand.net>

	* README: creation...
